modified css and made gifs static

--- a/giphy.html
+++ b/giphy.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>GifTastic</title>
+  <title>Football Gifs</title>
   <meta person="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -15,45 +16,43 @@
   <div id="soccerButtons">
 
 
-  <button class="btn btn-info soccer" data-person="Ronaldinho" style="margin: 5px;">Ronaldinho</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Ronaldinho" style="margin: 5px;">Ronaldinho</button>
 
-  <button class="btn btn-info soccer" data-person="Alessandro Del Piero" style="margin: 5px;">Alesandro Del Piero</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Alessandro Del Piero" style="margin: 5px;">Alesandro Del Piero</button>
 
-  <button class="btn btn-info soccer" data-person="Diego Maradona" style="margin: 5px;">Diego Maradona</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Diego Maradona" style="margin: 5px;">Diego Maradona</button>
 
-  <button class="btn btn-info soccer" data-person="Ronaldo" style="margin: 5px;">Ronaldo</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Ronaldo" style="margin: 5px;">Ronaldo</button>
 
-  <button class="btn btn-info soccer" data-person="Jesse Lingard" style="margin: 5px;">Jesse Lingard</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Jesse Lingard" style="margin: 5px;">Jesse Lingard</button>
 
-  <button class="btn btn-info soccer" data-person="Neymar" style="margin: 5px;">Neymar</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Neymar" style="margin: 5px;">Neymar</button>
 
-  <button class="btn btn-info soccer" data-person="Paul Pogba" style="margin: 5px;">Paul Pogba</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Paul Pogba" style="margin: 5px;">Paul Pogba</button>
 
-  <button class="btn btn-info soccer" data-person="Pirlo" style="margin: 5px;">Pirlo</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Pirlo" style="margin: 5px;">Pirlo</button>
 
-  <button class="btn btn-info soccer" data-person="Mbappe" style="margin: 5px;">Mbappe</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Mbappe" style="margin: 5px;">Mbappe</button>
 
-  <button class="btn btn-info soccer" data-person="Messi" style="margin: 5px;">Messi</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Messi" style="margin: 5px;">Messi</button>
 
-  <button class="btn btn-info soccer" data-person="Higuita" style="margin: 5px;">Higuita</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Higuita" style="margin: 5px;">Higuita</button>
 
-  <button class="btn btn-info soccer" data-person="Rainbow kick" style="margin: 5px;">Rainbow Kick</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Rainbow kick" style="margin: 5px;">Rainbow Kick</button>
 
-  <button class="btn btn-info soccer" data-person="Roberto Carlos" style="margin: 5px;">Roberto Carlos</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Roberto Carlos" style="margin: 5px;">Roberto Carlos</button>
 
 
 </div>
 
-<div style="float: right; margin-top:50px;margin-right:20px">
+<div style="float: right; margin-top:0px;margin-right:80px; color:whitesmoke">
   <h4>Add a player </h4>
      <form id="gif-form">
          <label for="gif-input"></label>
          <input type="text" value="" id="gif-input"><br><br>
-         <p>FYI, If you search for David Beckham</p>
-         <p> its mostly him without a shirt and </p>
-              <p>there are no gifs for Pelé.</p>
+       
          
-         <input type="submit" person="Btn" class="btn btn-success" id="sbmtButton" style="margin-left:8px">
+         <input type="submit" person="Btn" class="btn btn-light" id="sbmtButton" style="margin-left:8px">
      </form>
  </div>
 </form>
