renamed to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="soccerButtons">
 
 
-  <button class="btn btn-info soccer btn btn-light" data-person="Ronaldinho" style="margin: 5px;">Ronaldinho</button>
+  <!-- <button class="btn btn-info soccer btn btn-light" data-person="Ronaldinho" style="margin: 5px;">Ronaldinho</button>
 
   <button class="btn btn-info soccer btn btn-light" data-person="Alessandro Del Piero" style="margin: 5px;">Alesandro Del Piero</button>
 
@@ -40,7 +40,7 @@
 
   <button class="btn btn-info soccer btn btn-light" data-person="Rainbow kick" style="margin: 5px;">Rainbow Kick</button>
 
-  <button class="btn btn-info soccer btn btn-light" data-person="Roberto Carlos" style="margin: 5px;">Roberto Carlos</button>
+  <button class="btn btn-info soccer btn btn-light" data-person="Roberto Carlos" style="margin: 5px;">Roberto Carlos</button> -->
 
 
 </div>
